update components
