# src/schemas/v2/api/details.ts
@@ -1,18 +1,4 @@
-import { APIVersion, PatreonOauthScope } from '../../../v2'
-
-export const securitySchemes = {
-    auth: {
-        type: 'oauth2',
-        flows: {
-            authorizationCode: {
-                tokenUrl: 'https://patreon.com/api/oauth2/token',
-                authorizationUrl: 'https://patreon.com/oauth2/authorize',
-                scopes: Object.values(PatreonOauthScope)
-                    .reduce((scopes, scope) => ({ ...scopes, [scope]: 'A description' }), {})
-            }
-        }
-    }
-}
+import { APIVersion } from '../../../v2'
 
 export default {
     openapi: '3.1.0',
@@ -21,7 +7,10 @@ export default {
         version: `v${APIVersion}`,
         description: 'An unofficial OpenAPI schema for the V2 Patreon API. Made based on the official api with https://github.com/ghostrider-05/patreon-api.ts',
         // They mention in the FAQ on the dev portal that there will be an API TOS soon...
-        termsOfService: 'https://patreon.com/legal'
+        termsOfService: 'https://patreon.com/legal',
+        contact: {
+            name: 'Patreon',
+        },
     },
     externalDocs: {
         url: 'https://docs.patreon.com',
